--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Coming Soon</title>
+<title>Benedikt Lehnert – OMG I’m working remotely, now what?!</title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" >
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style type="text/css">
 body {
-  background-color: #6900FF;
+  background-color: #FFF;
 }
 
 body, h1, p {
