Added half the content

--- a/index.html
+++ b/index.html
@@ -39,28 +39,24 @@
 
 -->
 <link rel="stylesheet" type="text/css" href="MyFontsWebfontsKit.css">
+<link href="https://fonts.googleapis.com/css?family=Inter:400,500,600,700&display=swap" rel="stylesheet">
 
 <style type="text/css">
-body {
-  background-color: #FFF;
-}
 
-body, p {
-	font-family: "Helvetica Neue", "Segoe UI", Segoe, Helvetica, Arial, "Lucida Grande", sans-serif;
-	font-weight: normal;
+body {
+	font-family: Inter, "Helvetica Neue", "Segoe UI", Segoe, Helvetica, Arial, "Lucida Grande", sans-serif;
+	font-size: 20px;
+	font-weight: 400;
+	line-height: 1.7;
+	text-align: center;
 	margin: 0;
 	padding: 0;
-	text-align: center;
-}
-
-H1, H2 {
-	font-family: HagridText-Extrabold;
-	font-weight: normal; 
-	font-style: normal; 
+	background-color: #FFF;
 }
 
 .container {
-	max-width: 960px;
+	max-width: 760px;
+	display: inline-block;
 }
 
 .centered {
@@ -71,15 +67,202 @@ H1, H2 {
 	transform: translate(-50%, -50%);
 }
 
+section {
+	margin-bottom: 200px;
+}
+
+p {
+	text-align: left;
+}
+
+a, a:active, a:visited {
+	color: #000;
+	text-decoration: none;
+	border-bottom: none;
+}
+
+a:hover {
+	border-bottom: 3px solid #000;
+}
+
+ol {
+	text-align: left;
+	line-height: 1.8;
+	margin: 0;
+	padding: 0;
+	list-style-position: inside;
+}
+
+ul {
+	list-style: none;
+	list-style-type: none;
+	list-style-position: outside;
+	margin: 0;
+	padding: 0;
+}
+
+ul.l2 {
+	padding-left: 50px;
+}
+
+ul.l3 {
+	padding-left: 0;
+}
+
+
+H1, H2, H3, H4, H5 {
+	text-align: left;
+	line-height: 1.2;
+	margin: 40px 0 0 0;
+}
+
+H1, H2 {
+	font-family: HagridText-Extrabold;
+	font-size: 100px;
+	font-weight: normal; 
+	font-style: normal;
+	margin-top: 80px;
+	margin-bottom: 40px;
+}
+
+H2 {
+	font-size: 42px;
+}
+
+H3, H4, H5 {
+	font-family: Inter, "Helvetica Neue", "Segoe UI", Segoe, Helvetica, Arial, "Lucida Grande", sans-serif;
+	font-weight: 500;
+	line-height: 1.5;
+}
+
+H3 {
+	font-size: 28px;
+}
+
+H4 {
+	font-size: 26px;
+}
+
+H5 {
+	font-size: 22px;
+}
+
+.subhead-cover {
+	font-family: Hagrid-Regular;
+	font-size: 26px;
+	font-weight: normal; 
+	font-style: normal; 
+	text-align: left;
+	line-height: 1.7;
+}
+
 </style>
 </head>
 
 <body>
 	<div class="container">
-		<header>OMG I’m working remotely, now what?!</header>
-		<section id="toc"></section>
-		<section id=""></section>
-		<section id=""></section>
+		<header></header>
+		<section id="cover">
+			<h1>OMG <br/> I’m working remotely, now what?!</h1>
+			<h2 class="subhead-cover">Best practices and tips to help you stay sane,  focused and boost your productivity  while working from home, a coffee shop or  really anywhere in the world,  because distributed teams are a reality  and remote work is the future</h2>
+		</section>
+		<section id="toc">
+			<h2>Table of Contents</h2>
+			<ul class="l1">
+				<li><h3><a href="#toc">Table of contents</a></h3></li>
+				<li><h3><a href="#recommended-reading">Recommended reading</a></h3></li>
+				<li><h3><a href="#omg-im-working-remotely">OMG I’m working remotely, what now?!</a></h3></li>
+				<li><h3><a href="#the-future-of-work-is-here">The future of work is here</a></h3></li>
+				<li><h3><a href="#space-and-time">Space and time</a></h3></li>
+					<ul class="l2">
+						<li><h4><a href="#space">Space</a></h4></li>
+							<ul class="l3">
+								<li><h5><a href="#get-ready-set-go">Get ready, set, go!</a></h5></li>
+								<li><h5><a href="#make-it-comfy">Make it comfy</a></h5></li>
+								<li><h5><a href="#can-you-hear-me">Can you hear me? Is my camera on?</a></h5></li>
+								<li><h5><a href="#what-if-i-cant-work">What if I can’t work from home all the time because I’ll go nuts?</a></h5></li>
+							</ul>
+						<li><h4><a href="#time">Time</a></h4></li>
+							<ul class="l3">
+								<li><h5><a href="#work-hours">Work hours and how to use them</a></h5></li>
+								<li><h5><a href="#deep-work">Deep work, focus and flow</a></h5></li>
+							</ul>
+					</ul>
+				<li><h3><a href="#team-work-makes-the-dream-work">Team work makes the dream work</a></h3></li>
+					<ul class="l2">
+						<li><h4><a href="#trust">Trust</a></h4></li>
+						<li><h4><a href="#rhythm">Rhythm</a></h4></li>
+						<li><h4><a href="#meetings">Meetings</a></h4></li>
+						<li><h4><a href="#design-critiques">How to do design critiques, brainstorming or design sprints?</a></h4></li>
+						<li><h4><a href="#the-watercooler">But what about the watercooler?</a></h4></li>
+					</ul>
+				<li><h3><a href="#inspiration-sharing">Inspiration and a culture of sharing</a></h3></li>
+			</ul>
+		</section>
+		<section id="recommended-reading">
+			<h2>Recommended reading</h2>
+			<p>
+				<ol>
+					<li>”Remote” by Jason Fried and David Heinemeier-Hansson</li>
+					<li>”It doesn’t have to be crazy at work” by Jason Fried and David Heinemeier-Hansson</li>
+				</ol>
+			</p>
+		</section>
+		<section id="omg-im-working-remotely">
+			<h2>OMG I’m working remotely, what now?!</h2>
+			<p>Working remotely is much less scary than it may feel like at first. It’s much less about the tools than it is about the people. If in doubt over-communicate. Write a note, message in chat, or simply email. If it’s urgent, message to hop on a quick call. When you do that, give context why it’s urgent and what it’s about, ideally what you need as an outcome. That respects people’s time and makes things efficient. We’re all human, and we’re in this together. It’s also a lot of fun not being distracted by endless meetings and to have time for deep work as well as getting together as a team on group hangouts. You got this!
+			</p>
+		</section>
+		<section id="the-future-of-work-is-here">
+			<h2>The future of work is here</h2>
+			<p>The reality is that more and more (knowledge) work is done outside the office and the 9-5 hours. This fact and the transition to remote work and distributed teams is accelerating daily as tools are getting better and more companies embrace the benefits of their employees not being bound to a specific work place.</p>
+
+			<p>At Microsoft, our goal is to reinvent productivity and the future of work. To do that we need to live in the future we want to enable for the billions of people on the planet that use our services.</p>
+
+			<p>The office as the sole location to get work done is an illusion, in fact in most cases the opposite is already true. The 9-5 hour window is proven to be counter productive when it comes to empowering people to do their best work. And as being part of a global workforce/team we need to evolve the way we work. When one person is remote, the whole company is remote.</p>
+
+			<p>Working remotely, from home or a coffee shop has its benefits the same way meeting face to face in the office does. Building flexibility into our culture and becoming excellent at both will make us better across the board. In fact, most of the following remote work best practices can make your time in the office more productive as well.
+			</p>
+		</section>
+		<section id="space-and-time">
+			<h2>Space and Time</h2>
+			<p>When you’re working remotely you’re not necessarily always working from home. More on that later though. If you find yourself working from home there are two factors most important: your space and your time. Be mindful about how you design both, because they have a huge impact on your personal productivity.</p>
+			
+			<h3 id="space">Space</h3>
+			<p>There’s not much needed with regards to your space: find a corner or room in your place that makes for a comfy work place. Ideally you can identify several of these spots in your house so you can move around. I move between my actual home office, the big farm table in our dining room and the comfy leather chair in the living room. These places serve different purposes.</p>
+			
+			<h4 id="get-ready-set-go">Get ready, set, go!</h4>
+			<p>When you get ready to work from home follow a routine that gets you into the right mood and mindset. Many people prefer to follow the same routine that they have when going to the office. Let people in your house know that you’re going to work from home, communicate your schedule and availability so that expectations are clearly set.</p>
+			
+			<h4 id="make-it-comfy">Make it comfy</h4>
+			<p>Working from home does give you the benefit of having access to more ”comfy” seating, cozying up by the fire or sitting at the kitchen table. This is great when you are in a video chat or consuming information on your device. But following best practices around ergonomics still hold true (sitting up straight, right angles, not craning your neck when doing work that involves heavy keyboard usage is still a good idea).</p>
+
+			<p>Make sure your work space(s) are comfy and ergonomic, so you don’t end up with a neck ache or worse from unhealthy positions. A good chair, proper desk (maybe a monitor if you need more screen and/or for better ergonomics) and some good lighting is all you really need. If in doubt, set a timer and get up every hour to move your legs or invest in a standing desk. Go for a walk, it’s a productivity hack! (I just bought a desk treadmill for rainy days, thank you StayFit budget!)</p>
+			
+			<h4 id="can-you-hear-me">Can you hear me? Is my camera on?</h4>
+			<p>Most cameras that are built-in to our devices are pretty good for video calls. BTW you should always have your video on if there’s no really good reason to have it off. It may feel strange at first, but it makes all the difference for the human-to-human connection. If you want a sharper image, auto focus, fancy depth of field you can buy anything from a $99 external usb webcam to an actual digital camera with video function worth several hundred dollars (I personally think that’s overkill).</p>
+			
+			<p>Get a good set of headphones and a microphone. You can get those separate or just get some AirPods (Pro) or Surface Earbuds (if you can get your hands on them). Some people prefer noise cancelling and/or over ear headphones, that’s your choice. I prefer my AirPods because I take them everywhere, making my phone and headphones my mini office on the go.</p>
+
+			<p>Note: In high internet traffic situations (like when the entire world is suddenly going to work from home) or when you’re working on a lower bandwidth connection it may make sense to switch off your video or leave it off by default.</p>
+			
+			<h4 id="what-if-i-cant-work">What if I can’t work from home all the time because I’ll go nuts?</h4>
+			<p>I want to acknowledge that some people need to be around others (or any other stimulation such as sound) to be productive. I do, too. That’s when I decide to either go to the Soho Office (not an option right now) or a coworking space or simply work from a coffee shop. Sometimes it’s also just nice to sit outside instead of in the house. If you’re someone who just needs some audio stimulation there are great (free) websites that play the sounds of various environments such as a coffee shop, train station or the forest. Just search for them online. Super fun!<p>
+
+			<p>Working from home or remotely doesn’t mean you have to deprive yourself of human interactions. Be sure to meet with friends or coworkers to either work together in the same location or just hang out and chat. It’s important to cultivate the mix that’s right for you. More on how fully remote / distributed teams can make this work in the ”Working as a team” section below.</p>
+			
+			<h3 id="time">Time</h3>
+			<p>Almost more important than your space is your time. Most of you probably know yet are not fully aware of how fragmented our time gets when we’re in an office. That’s ok, often necessary and good. The benefit of working remotely is that you can use the time you have in a more flexible way, reduce fragmentation and increase focus time to do deep work. To do that you need to be intentional about the meetings that are important for you to call into and the available time slots around those.</p>
+			
+			<h4 id="work-hours">Work hours and how to use them</h4>
+			<p>While the classic 9-5 work hours are outdated it helps to set work hours for yourself, so you feel a certain kind of structure around your day. 8 hours is a good rule of thumb, accounting for 3-4h of deep work and the rest for meetings, calls etc.</p> 
+
+			<p>I recommend (and am fairly strict about this with my own time) blocking off time for deep focused work vs. time for meetings/calls/1:1s. In fact, my whole day (not just work) is designed for each day of the week which makes it a lot easier for me to plan, get stuff done and not drown in anxiety.</p>
+
+			<p>A tricky thing with work hours is that it is important to communicate with your team so that everyone know when you’re going to be available. That may feel strange or uncomfortable at first (being present in the office makes this part a lot easier), but if we all do it, it’s expected and not a problem at all. In fact, we should probably do this more often in the office too: “Hey, I’m doing some deep work right now, and won’t be available from 1-3pm”.</p>
+
+			<p>I personally block the first half of my work day for deep work, starting right after school drop-off and workout. That works best for me, because I work on East Coast time, and can so load balance with the number of calls and meetings that will hit me when everyone wakes up in Redmond, SF and such. Some days I move things around so I can ensure I get to meet with the folks on the other side of the world, in Europe and India, so I do meetings and calls in the morning.</p>
+		</section>
 		<footer></footer>
 	</div>
 </body>
