--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@
 
 <style type="text/css">
 
+::-moz-selection { /* Code for Firefox */
+  color: #FFF;
+  background: #000;
+}
+
+::selection {
+  color: #FFF;
+  background: #000;
+}
+
 body {
 	font-family: Inter, "Helvetica Neue", "Segoe UI", Segoe, Helvetica, Arial, "Lucida Grande", sans-serif;
 	font-size: 20px;
@@ -68,7 +78,7 @@ body {
 }
 
 section {
-	margin-bottom: 200px;
+	margin-bottom: 150px;
 }
 
 p {
@@ -82,7 +92,7 @@ a, a:active, a:visited {
 }
 
 a:hover {
-	border-bottom: 3px solid #000;
+	border-bottom: 2px solid #000;
 }
 
 ol {
@@ -112,7 +122,7 @@ ul.l3 {
 
 H1, H2, H3, H4, H5 {
 	text-align: left;
-	line-height: 1.2;
+	line-height: 1.1;
 	margin: 40px 0 0 0;
 }
 
@@ -161,7 +171,9 @@ H5 {
 
 <body>
 	<div class="container">
-		<header></header>
+		<header>
+			<p><a href="http://www.benedikt-lehnert.de">Benedikt Lehnert</a></p>
+		</header>
 		<section id="cover">
 			<h1>OMG <br/> I’m working remotely, now what?!</h1>
 			<h2 class="subhead-cover">Best practices and tips to help you stay sane,  focused and boost your productivity  while working from home, a coffee shop or  really anywhere in the world,  because distributed teams are a reality  and remote work is the future</h2>
@@ -197,14 +209,15 @@ H5 {
 						<li><h4><a href="#the-watercooler">But what about the watercooler?</a></h4></li>
 					</ul>
 				<li><h3><a href="#inspiration-sharing">Inspiration and a culture of sharing</a></h3></li>
+				<li><h3><a href="#acknowledgements">Acknowledgements and thank yous</a></h3></li>
 			</ul>
 		</section>
 		<section id="recommended-reading">
 			<h2>Recommended reading</h2>
 			<p>
 				<ol>
-					<li>”Remote” by Jason Fried and David Heinemeier-Hansson</li>
-					<li>”It doesn’t have to be crazy at work” by Jason Fried and David Heinemeier-Hansson</li>
+					<li><a href="https://www.amazon.com/Remote-Office-Required-Jason-Fried/dp/0804137501/ref=sr_1_2?crid=3AZFGYOF74TJJ&keywords=remote+jason+fried&qid=1583639529&sprefix=remote+Jason%2Caps%2C140&sr=8-2">”Remote”</a> by Jason Fried and David Heinemeier-Hansson</li>
+					<li><a href="https://www.amazon.com/Doesnt-Have-Be-Crazy-Work/dp/0062874780/ref=sr_1_4?crid=3AZFGYOF74TJJ&keywords=remote+jason+fried&qid=1583639551&sprefix=remote+Jason%2Caps%2C140&sr=8-4">”It doesn’t have to be crazy at work”</a> by Jason Fried and David Heinemeier-Hansson</li>
 				</ol>
 			</p>
 		</section>
@@ -215,21 +228,21 @@ H5 {
 		</section>
 		<section id="the-future-of-work-is-here">
 			<h2>The future of work is here</h2>
-			<p>The reality is that more and more (knowledge) work is done outside the office and the 9-5 hours. This fact and the transition to remote work and distributed teams is accelerating daily as tools are getting better and more companies embrace the benefits of their employees not being bound to a specific work place.</p>
+			<p>The reality is that more and more (knowledge) work is done outside the office and the 9–5 hours. This fact and the transition to remote work and distributed teams is accelerating daily as tools are getting better and more companies embrace the benefits of their employees not being bound to a specific work place.</p>
 
-			<p>At Microsoft, our goal is to reinvent productivity and the future of work. To do that we need to live in the future we want to enable for the billions of people on the planet that use our services.</p>
+			<p>At Microsoft, we work to reinvent productivity and shape the future of work; our mission is to empower every person and organization on the planet to achieve more. To do that we need to live in the future we want to enable for the billions of people that use our services around the world.</p>
 
-			<p>The office as the sole location to get work done is an illusion, in fact in most cases the opposite is already true. The 9-5 hour window is proven to be counter productive when it comes to empowering people to do their best work. And as being part of a global workforce/team we need to evolve the way we work. When one person is remote, the whole company is remote.</p>
+			<p>The office as the sole location to get work done is an illusion, in fact in most cases the opposite is already true. The 9–5 hour window is proven to be counter productive when it comes to empowering people to do their best work. And as being part of a global workforce/team we need to evolve the way we work. When one person is remote, the whole company is remote.</p>
 
 			<p>Working remotely, from home or a coffee shop has its benefits the same way meeting face to face in the office does. Building flexibility into our culture and becoming excellent at both will make us better across the board. In fact, most of the following remote work best practices can make your time in the office more productive as well.
 			</p>
 		</section>
 		<section id="space-and-time">
 			<h2>Space and Time</h2>
-			<p>When you’re working remotely you’re not necessarily always working from home. More on that later though. If you find yourself working from home there are two factors most important: your space and your time. Be mindful about how you design both, because they have a huge impact on your personal productivity.</p>
+			<p>When you’re working remotely, you’re not necessarily always working from home. More on that later though. If you find yourself working from home two factors are most important: your space and your time. Be mindful about how you design both, because they have a huge impact on your personal productivity.</p>
 			
 			<h3 id="space">Space</h3>
-			<p>There’s not much needed with regards to your space: find a corner or room in your place that makes for a comfy work place. Ideally you can identify several of these spots in your house so you can move around. I move between my actual home office, the big farm table in our dining room and the comfy leather chair in the living room. These places serve different purposes.</p>
+			<p>There’s only a few things needed with regards to your space: find a corner or room in your place that makes for a comfy work place. Ideally you can identify several of these spots in your house so you can move around, but don’t worry one spot is perfectly sufficient. I move between my actual home office, the big farm table in our dining room and the comfy leather chair in the living room. These places serve different purposes depending on the type of work I’m doing.</p>
 			
 			<h4 id="get-ready-set-go">Get ready, set, go!</h4>
 			<p>When you get ready to work from home follow a routine that gets you into the right mood and mindset. Many people prefer to follow the same routine that they have when going to the office. Let people in your house know that you’re going to work from home, communicate your schedule and availability so that expectations are clearly set.</p>
@@ -262,8 +275,72 @@ H5 {
 			<p>A tricky thing with work hours is that it is important to communicate with your team so that everyone know when you’re going to be available. That may feel strange or uncomfortable at first (being present in the office makes this part a lot easier), but if we all do it, it’s expected and not a problem at all. In fact, we should probably do this more often in the office too: “Hey, I’m doing some deep work right now, and won’t be available from 1-3pm”.</p>
 
 			<p>I personally block the first half of my work day for deep work, starting right after school drop-off and workout. That works best for me, because I work on East Coast time, and can so load balance with the number of calls and meetings that will hit me when everyone wakes up in Redmond, SF and such. Some days I move things around so I can ensure I get to meet with the folks on the other side of the world, in Europe and India, so I do meetings and calls in the morning.</p>
+			
+			<h4 id="deep-work">Deep work, focus and flow</h4>
+			<p>Since, as a company, we’re really good at setting up meetings (as in we have A TON of meetings), I will focus first on deep work. Also because I think we don’t get enough of this. This is the kind of work, where you get uninterrupted time (for a few hours) to focus solely on what you have to / want to create and get done. It’s the opposite of feeling busy. It’s where you feel in the flow and just doing work. This kind of work should feel really good and you feel accomplished once you take a break. Try and use the days you’re working from home to get lots of this type of work in.</p>
 		</section>
-		<footer></footer>
+		<section id="team-work-makes-the-dream-work">
+			<h2>Team work makes the dream work</h2>
+			<p>There are some social contracts and habits that we’ve built as a company and in society as a whole that may get challenged by people not working in an office. Some of those are helpful other are not useful anymore in the knowledge work era. I already briefly touched at the 9-5 work hours concept which is pretty much useless already given that we’re a distributed company with coworkers in all corners of the world. Another concept that’s overdue to be changed is that presence equals productivity or productive outcome. We all know this, yet often times it’s still an existing (subconscious) bias at work.</p>
+			
+			<h3 id="trust">Trust</h3>
+			<p>Working remotely and as a distributed requires trust (just like working together in an office), especially since it may feel like some of those social contracts above are being removed. This trust exists between managers and their team as well as between team members.</p> 
+
+			<p>We need to trust in each other and our process. It’s important that we establish this trust through honest, candid and direct communication. If something feels off, let’s talk about it. Especially since working remotely is new for many, we need to tune into each others concerns and experiment with what works for the individuals and the team as a whole.</p>
+
+			<p>My learning is that most of the time the solution lies in less process, more autonomy and better communication.</p>
+			
+			<h3 id="rhythm">Rhythm</h3>
+			<p>I will talk about the rhythm that has worked for me and my teams now and in the past, but that doesn’t mean that’s the only way to do it. Find a rhythm that works for you and your team. Experiment. Focus on ensuring people feel connected and present, without overloading the day with video calls and meetings. Presence is not just a synchronous thing. Most of the work can be accomplished asynchronously. Optimize for that.</p>
+
+			<p>As I said a few times before, working remote and as a distributed team gives us a chance to challenge and optimize our existing rhythm and way of working. It allows us to make it better both for working from home (or anywhere in the world) and in the office. That’s a real opportunity right there!</p>
+
+			<p>I typically start the week <strong>on Mondays</strong> with 30 min 1:1s. That’s pretty much all of my Monday, meeting with my team members from across the globe. These meetings are to check in on how they’re doing, how their projects are going and if there’s anything I can do to help them succeed. These 1:1s are video calls on Teams.</p>
+
+			<p>We, as a team, also <strong>start the week</strong> with virtual standups in our special “Standup” channel in Teams. These are in written form, bullet point (emoji-rich) short lists of what every single person on the team is working on that particular week. A great way to keep the whole team update asynchronously without having to meet in person.</p>
+
+			<p><strong>Over the course of the week</strong> we make extensive use of the “General” channel in Teams for any sort of discussion/topic that is of interest for the whole team. Be sure to rather over-communicate that not communicate enough. Don’t expect immediate responses here, but trust that your team mates will take a look at the messages and will respond. If you need someone’s feedback urgently, ping them in a DM. Share work early and often in Teams. Your team mates can give feedback and share ideas, it’s inspiring, makes your work better and creates a sense of presence and connectedness.</p>
+
+			<p><strong>On Fridays</strong> we have our weekly team meeting where the whole team gets together for 1 hour to talk through top of mind topics, share work or discuss some bigger product related topic that we all chime in on.</p>
+
+			<p><strong>At least once a quarter</strong> we meet with the entire team in the same location for a few days to see each other in person. We spend time working together, often on larger topics that requires our collective creativity and brainpower, and we dedicate time to go out for lunch and dinner to connect and have fun as people. We find these quarterly team meetings incredibly valuable because they pay into our morale, trust and culture accounts as a team, more on that below.</p>
+
+			<p>We also have several <strong>“casual” channels</strong> where we share interesting things to read, music or videos.</p>
+
+			<h3 id="meetings">Meetings</h3>
+			<p>Working remotely and in a distributed team has many challenges, especially in a company that literally runs on meetings. Here’s what I’ve learned and some things I find to be useful.</p>
+
+			<p>One great thing about working remotely and having to do meetings is that there’s no commute time. No walking to buildings (you still need to get up and move your legs though), no looking for rooms in places where you really can’t figure out where the heck this room is, no trying to find out which cable will actually make your slides appear on the projector. Yay!</p>
+
+			<p>First order, try and assess which meetings really have to be meetings and which could be asynchronous chats, shared documents or simply an email. Meetings should be to make decisions, move things forward, brainstorm (careful with this one, it can feel like work but be unproductive) or simply to hangout (more on this later).</p>
+
+			<p>When you schedule meetings make it clear that you communicate agenda, goals and outcomes upfront. Ensure that everyone is aware of those. Everyone should have their video on, be respectful and give people a chance to chime in. Sometimes (if the meeting has lots of people) it makes sense to nominate a moderator to read through comments, questions and suggestions in the chat, or to simply ensure people get to speak.</p>
+
+			<p>Making use of the meeting chat can also be generally useful to document action items, notes or simply share files that people can revisit later. If some people can’t join, record the meeting (maybe make this the standard for your team) and share all notes and files after.</p>
+			
+			<h3 id="design-critiques">How to do design critiques, brainstorming or design sprints?</h3>
+			<p>I heard some people ask about how to do design critiques, brainstorming or even design sprints remotely. These all have their very own level of complexity, but the short answer is: you can do all of those remotely. I will try to at least share some suggestions and recommendations here.</p>
+
+			<p>Design critiques / share outs / brainstorms are all fairly straightforward. Get on your Teams call, be clear about your agenda, goals and decisions and make extensive use of sharing your screen(s). It can help to use real-time design tools such as Figma if you want to dabble in the same file all at the same time. The latter is probably more useful for brainstormings and design sprints.</p>
+
+			<p>Design sprints are a little trickier (at least if you want to follow the original GV method). It helps that there are several tools (from white board over notes/documents to design tools) that make it easy to collaborate in real-time. I suggest do decide on which tool matches best with the intent of every day of the sprint (the purpose of each sprint day is typically really clearly defined). Try to make as much asynchronous progress per day as possible, have people meet over video in smaller groups and do a recap call with everyone at the end of the day as well as a kickoff call in the morning to get started.</p>
+			
+			<h3 id="the-watercooler">But what about the water cooler?</h3>
+			<p>At times, it can feel lonely to be working remotely. You miss the water cooler chat, hanging out with your team mates and just have a casual conversation. Well, good news! We can use our tools not only for work, but also for fun. Why not just set up 20 min for a coffee/tea break for the entire team: You all schedule the time, people make sure they bring their fanciest cup of their favorite hot beverage and y’all enjoy just hanging out on a video call chatting about what’s new, sharing funny cat videos and the latest Baby Yoda memes.</p>
+		</section>
+		<section>
+			<h2 id="inspiration-sharing">Inspiration and a culture of sharing</h2>
+			<p>One of the trickiest things to make work when working as a distributed team is knowing what people are working on. Transparency around this can often feel heavy and forced. Instead, you'd want to cultivate a culture of constant sharing. Working on a new design or prototype, just throw it into Teams for the team to see. People can comment, share feedback or simply high-five you to keep going with your awesome work. Same goes for documents, notes, slides and pretty much any other thing you create. It can be scary at first, but it’s just your team mates, and since you all are doing it, it becomes normal and fun to make each other better. Pro-tip: Do a screen recording with you talking over your design / prototype / slides and share that with your team mates. That way they get your full train of thought and can listen to you as well for an added personal touch and connection.</p>
+		</section>
+		<section id="acknowledgements">
+			<h2>Acknowledgements and thank yous</h2>
+			<p>This document was created in early March 2020 when the Corona Virus outbreak had many companies, Microsoft included, switch a large part of their workforce to work from home. This document <strong>does not aim to be complete</strong> but instead is a collection of guidance, learnings and best practices that I acquired over the years working and managing remotely, and thought to be helpful for my fellow managers and team mates at Microsoft.</p>
+			<p>There’s a lot of great thorough research and writing on working remotely out there. <strong>If you have resources that you think should be included, please get in touch</strong> via email me at <a href="mailto: benedikt.lehnert+remote@gmail.com">benedikt.lehnert+remote@gmail.com</a> or <a href="http://twitter.com/blehnert">ping me on Twitter</a></p>
+			<p><strong>A big thank you to my colleagues and my team</strong> for helping me bring this content together within 24 hours. Thank you to <strong>my manager Jon Friedman</strong> who’s taken more than one chance on me building remote teams at Microsoft over the past 5 years. Thank you also to my wife and partner in crime, <strong><a href="http://twitter.com/imcatnoone">Cat Noone</a></strong>, who’s an inspiration, sounding board and fellow remote design leader that I learn from every day. And a big thank you to <strong>all folks who have reached out on Twitter, Linkedin and other channels</strong> asking if they could read this. I hope it will be helpful for you. Please send feedback!
+		</section>
+		<footer>
+			<p>This is version 1.<br/> I plan to update this as I learn what people are missing.<br/> Last updated: March 7, 2020</p>
+		</footer>
 	</div>
 </body>
 </html>
