added a paragraph on writing as a culture

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 body {
 	font-family: Inter, "Helvetica Neue", "Segoe UI", Segoe, Helvetica, Arial, "Lucida Grande", sans-serif;
-	font-size: 20px;
+	font-size: 22px;
 	font-weight: 400;
 	line-height: 1.7;
 	text-align: center;
@@ -122,7 +122,7 @@ ul.l3 {
 
 H1, H2, H3, H4, H5 {
 	text-align: left;
-	line-height: 1.1;
+	line-height: 1.2;
 	margin: 40px 0 0 0;
 }
 
@@ -140,7 +140,7 @@ H2 {
 }
 
 H3, H4, H5 {
-	font-family: Inter, "Helvetica Neue", "Segoe UI", Segoe, Helvetica, Arial, "Lucida Grande", sans-serif;
+	font-family: Hagrid-Regular, Inter, "Helvetica Neue", "Segoe UI", Segoe, Helvetica, Arial, "Lucida Grande", sans-serif;
 	font-weight: 500;
 	line-height: 1.5;
 }
@@ -222,7 +222,7 @@ H5 {
 			</p>
 		</section>
 		<section id="omg-im-working-remotely">
-			<h2>OMG I’m working remotely, what now?!</h2>
+			<h2>OMG I’m working remotely, now what?!</h2>
 			<p>Working remotely is much less scary than it may feel like at first. It’s much less about the tools than it is about the people. If in doubt over-communicate. Write a note, message in chat, or simply email. If it’s urgent, message to hop on a quick call. When you do that, give context why it’s urgent and what it’s about, ideally what you need as an outcome. That respects people’s time and makes things efficient. We’re all human, and we’re in this together. It’s also a lot of fun not being distracted by endless meetings and to have time for deep work as well as getting together as a team on group hangouts. You got this!
 			</p>
 		</section>
@@ -312,11 +312,13 @@ H5 {
 
 			<p>One great thing about working remotely and having to do meetings is that there’s no commute time. No walking to buildings (you still need to get up and move your legs though), no looking for rooms in places where you really can’t figure out where the heck this room is, no trying to find out which cable will actually make your slides appear on the projector. Yay!</p>
 
-			<p>First order, try and assess which meetings really have to be meetings and which could be asynchronous chats, shared documents or simply an email. Meetings should be to make decisions, move things forward, brainstorm (careful with this one, it can feel like work but be unproductive) or simply to hangout (more on this later).</p>
+			<p>First order: Assess which meetings really have to be meetings and which could be asynchronous chats, shared documents or simply an email. Meetings should be to make decisions, move things forward, brainstorm (careful with this one, it can feel like work but be unproductive) or simply to hangout (more on this later).</p>
 
 			<p>When you schedule meetings make it clear that you communicate agenda, goals and outcomes upfront. Ensure that everyone is aware of those. Everyone should have their video on, be respectful and give people a chance to chime in. Sometimes (if the meeting has lots of people) it makes sense to nominate a moderator to read through comments, questions and suggestions in the chat, or to simply ensure people get to speak.</p>
 
 			<p>Making use of the meeting chat can also be generally useful to document action items, notes or simply share files that people can revisit later. If some people can’t join, record the meeting (maybe make this the standard for your team) and share all notes and files after.</p>
+			
+			<p>Write more, talk less. Optimize your team’s workflow for asynchronous collaboration by writing down thoughts, ideas or proposals. Not only does it help you clarify your thoughts, it allows your team mates to catch up at their own time. Send pre-reads before meetings and document the meeting in extensive notes so people that couldn’t attend can follow up. Writing is a skill we all can practice, so just start doing it and you’ll notice how you’ll get better fairly quickly.</p>
 			
 			<h3 id="design-critiques">How to do design critiques, brainstorming or design sprints?</h3>
 			<p>I heard some people ask about how to do design critiques, brainstorming or even design sprints remotely. These all have their very own level of complexity, but the short answer is: you can do all of those remotely. I will try to at least share some suggestions and recommendations here.</p>
@@ -330,13 +332,15 @@ H5 {
 		</section>
 		<section>
 			<h2 id="inspiration-sharing">Inspiration and a culture of sharing</h2>
-			<p>One of the trickiest things to make work when working as a distributed team is knowing what people are working on. Transparency around this can often feel heavy and forced. Instead, you'd want to cultivate a culture of constant sharing. Working on a new design or prototype, just throw it into Teams for the team to see. People can comment, share feedback or simply high-five you to keep going with your awesome work. Same goes for documents, notes, slides and pretty much any other thing you create. It can be scary at first, but it’s just your team mates, and since you all are doing it, it becomes normal and fun to make each other better. Pro-tip: Do a screen recording with you talking over your design / prototype / slides and share that with your team mates. That way they get your full train of thought and can listen to you as well for an added personal touch and connection.</p>
+			<p>One of the trickiest things to make work when working as a distributed team is knowing what people are working on. Transparency around this can often feel heavy and forced. Instead, you'd want to cultivate a culture of constant sharing. Working on a new design or prototype, just throw it into Teams for everyone to see.</p>
+			<p>People can comment, share feedback or simply high-five you to keep going with your awesome work. Same goes for documents, notes, slides and pretty much any other thing you create. It can be scary at first, but it’s just your team mates, and since you all are doing it, it becomes normal and fun to make each other better.</p> 
+			<p>Pro-tip: Do a screen recording with you talking over your design / prototype / slides and share that with your team mates. That way they get your full train of thought and can listen to you as well for an added personal touch and connection.</p>
 		</section>
 		<section id="acknowledgements">
 			<h2>Acknowledgements and thank yous</h2>
 			<p>This document was created in early March 2020 when the Corona Virus outbreak had many companies, Microsoft included, switch a large part of their workforce to work from home. This document <strong>does not aim to be complete</strong> but instead is a collection of guidance, learnings and best practices that I acquired over the years working and managing remotely, and thought to be helpful for my fellow managers and team mates at Microsoft.</p>
 			<p>There’s a lot of great thorough research and writing on working remotely out there. <strong>If you have resources that you think should be included, please get in touch</strong> via email me at <a href="mailto: benedikt.lehnert+remote@gmail.com">benedikt.lehnert+remote@gmail.com</a> or <a href="http://twitter.com/blehnert">ping me on Twitter</a></p>
-			<p><strong>A big thank you to my colleagues and my team</strong> for helping me bring this content together within 24 hours. Thank you to <strong>my manager Jon Friedman</strong> who’s taken more than one chance on me building remote teams at Microsoft over the past 5 years. Thank you also to my wife and partner in crime, <strong><a href="http://twitter.com/imcatnoone">Cat Noone</a></strong>, who’s an inspiration, sounding board and fellow remote design leader that I learn from every day. And a big thank you to <strong>all folks who have reached out on Twitter, Linkedin and other channels</strong> asking if they could read this. I hope it will be helpful for you. Please send feedback!</p>
+			<p><strong>A big thank you to my colleagues and my team</strong> for helping me bring this content together within 24 hours. Thank you to <strong>my manager <a href="http://twitter.com/designjon">Jon Friedman</a></strong> who’s taken more than one chance on me building remote teams at Microsoft over the past 5 years. Thank you also to my wife and partner in crime, <strong><a href="http://twitter.com/imcatnoone">Cat Noone</a></strong>, who’s an inspiration, sounding board and fellow remote design leader that I learn from every day. And a big thank you to <strong>all folks who have reached out on Twitter, Linkedin and other channels</strong> asking if they could read this. I hope it will be helpful for you. Please send feedback!</p>
 			<p>This website is hosted on Github and uses two wonderful typefaces: Hagrid Text and Inter.</p>
 		</section>
 		<footer>
