--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ H5 {
 			<h2>The future of work is here</h2>
 			<p>The reality is that more and more (knowledge) work is done outside the office and the 9–5 hours. This fact and the transition to remote work and distributed teams is accelerating daily as tools are getting better and more companies embrace the benefits of their employees not being bound to a specific work place.</p>
 
-			<p>At Microsoft, we work to reinvent productivity and shape the future of work; our mission is to empower every person and organization on the planet to achieve more. To do that we need to live in the future we want to enable for the billions of people that use our services around the world.</p>
+			<p>At Microsoft, we work to reinvent productivity and shape the future of work; our mission is to empower every person and organization on the planet to achieve more. To do that we need to continuously live in the future we want to enable for the billions of people that use our services around the world.</p>
 
 			<p>The office as the sole location to get work done is an illusion, in fact in most cases the opposite is already true. The 9–5 hour window is proven to be counter productive when it comes to empowering people to do their best work. And as being part of a global workforce/team we need to evolve the way we work. When one person is remote, the whole company is remote.</p>
 
