Mobile style sheet optimization

--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@ body {
 .container {
 	max-width: 760px;
 	display: inline-block;
+	padding: 10px;
+	overflow: hidden;
 }
 
 .centered {
@@ -164,6 +166,139 @@ H5 {
 	font-style: normal; 
 	text-align: left;
 	line-height: 1.7;
+}
+
+/* Media Queries */
+
+/* Desktop Big Ass Screens */
+@media (min-width: 1441px) {
+
+
+}
+
+@media (max-width: 900px) {
+ 
+}
+
+/* Tablet */
+@media (max-width: 1136px) and (min-width: 769px) {
+
+
+
+}
+
+/* Tablet */
+@media (max-width: 768px) and (min-width: 641px) {
+
+
+
+}
+
+/* Mobile */
+@media (max-width: 640px) and (min-width: 481px) {  
+
+
+
+}
+
+/* Mobile */
+@media (max-width: 480px) and (min-width: 321px) {  
+ 
+
+  
+}
+
+/* Mobile */
+@media (max-width: 480px) and (min-width: 0px) { 
+
+body {
+	font-size: 16px;
+}
+
+section {
+	margin-bottom: 80px;
+}
+
+.container {
+	width: 90%;
+	display: inline-block;
+	padding: 10px;
+	overflow: hidden;
+}
+
+p {
+	margin-bottom: 30px;
+}
+
+ol {
+	text-align: left;
+	line-height: 1.8;
+	margin: 0;
+	padding: 0;
+	list-style-position: inside;
+}
+
+ul {
+	list-style: none;
+	list-style-type: none;
+	list-style-position: outside;
+	margin: 0;
+	padding: 0;
+}
+
+ul.l2 {
+	padding-left: 50px;
+}
+
+ul.l3 {
+	padding-left: 0;
+}
+
+
+H1, H2, H3, H4, H5 {
+	text-align: left;
+	line-height: 1.2;
+	margin: 20px 0 0 0;
+}
+
+H1, H2 {
+	font-family: HagridText-Extrabold;
+	font-size: 50px;
+	font-weight: normal; 
+	font-style: normal;
+	margin-top: 40px;
+	margin-bottom: 20px;
+}
+
+H2 {
+	font-size: 28px;
+}
+
+H3, H4, H5 {
+	line-height: 1.5;
+}
+
+H3 {
+	font-size: 20px;
+}
+
+H4 {
+	font-size: 18px;
+}
+
+H5 {
+	font-size: 16px;
+}
+
+.subhead-cover {
+	font-family: Hagrid-Regular;
+	font-size: 18px;
+	font-weight: normal; 
+	font-style: normal; 
+	text-align: left;
+	line-height: 1.7;
+}
+  
 }
 
 </style>
