Fixed quotations and added some sentences in several sections.

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@ H5 {
 			<p>When you get ready to work from home follow a routine that gets you into the right mood and mindset. Many people prefer to follow the same routine that they have when going to the office. Let people in your house know that you’re going to work from home, communicate your schedule and availability so that expectations are clearly set.</p>
 			
 			<h4 id="make-it-comfy">Make it comfy</h4>
-			<p>Working from home does give you the benefit of having access to more ”comfy” seating, cozying up by the fire or sitting at the kitchen table. This is great when you are in a video chat or consuming information on your device. But following best practices around ergonomics still hold true (sitting up straight, right angles, not craning your neck when doing work that involves heavy keyboard usage is still a good idea).</p>
+			<p>Working from home does give you the benefit of having access to more “comfy” seating, cozying up by the fire or sitting at the kitchen table. This is great when you are in a video chat or consuming information on your device. But following best practices around ergonomics still hold true (sitting up straight, right angles, not craning your neck when doing work that involves heavy keyboard usage is still a good idea).</p>
 
 			<p>Make sure your work space(s) are comfy and ergonomic, so you don’t end up with a neck ache or worse from unhealthy positions. A good chair, proper desk (maybe a monitor if you need more screen and/or for better ergonomics) and some good lighting is all you really need. If in doubt, set a timer and get up every hour to move your legs or invest in a standing desk. Go for a walk, it’s a productivity hack! (I just bought a desk treadmill for rainy days, thank you StayFit budget!)</p>
 			
@@ -397,7 +397,7 @@ H5 {
 			<h4 id="what-if-i-cant-work">What if I can’t work from home all the time because I’ll go nuts?</h4>
 			<p>I want to acknowledge that some people need to be around others (or any other stimulation such as sound) to be productive. I do, too. That’s when I decide to either go to the Soho Office (not an option right now) or a coworking space or simply work from a coffee shop. Sometimes it’s also just nice to sit outside instead of in the house. If you’re someone who just needs some audio stimulation there are great (free) websites that play the sounds of various environments such as a coffee shop, train station or the forest. Just search for them online. Super fun!<p>
 
-			<p>Working from home or remotely doesn’t mean you have to deprive yourself of human interactions. Be sure to meet with friends or coworkers to either work together in the same location or just hang out and chat. It’s important to cultivate the mix that’s right for you. More on how fully remote / distributed teams can make this work in the ”Working as a team” section below.</p>
+			<p>Working from home or remotely doesn’t mean you have to deprive yourself of human interactions. Be sure to meet with friends or coworkers to either work together in the same location or just hang out and chat. It’s important to cultivate the mix that’s right for you. More on how fully remote / distributed teams can make this work in the “Working as a team” section below.</p>
 			
 			<h3 id="time">Time</h3>
 			<p>Almost more important than your space is your time. Most of you probably know yet are not fully aware of how fragmented our time gets when we’re in an office. That’s ok, often necessary and good. The benefit of working remotely is that you can use the time you have in a more flexible way, reduce fragmentation and increase focus time to do deep work. To do that you need to be intentional about the meetings that are important for you to call into and the available time slots around those.</p>
@@ -463,7 +463,7 @@ H5 {
 			<p>Design sprints are a little trickier (at least if you want to follow the original GV method). It helps that there are several tools (from white board over notes/documents to design tools) that make it easy to collaborate in real-time. I suggest do decide on which tool matches best with the intent of every day of the sprint (the purpose of each sprint day is typically really clearly defined). Try to make as much asynchronous progress per day as possible, have people meet over video in smaller groups and do a recap call with everyone at the end of the day as well as a kickoff call in the morning to get started.</p>
 			
 			<h3 id="the-watercooler">But what about the water cooler?</h3>
-			<p>At times, it can feel lonely to be working remotely. You miss the water cooler chat, hanging out with your team mates and just have a casual conversation. Well, good news! We can use our tools not only for work, but also for fun. Why not just set up 20 min for a coffee/tea break for the entire team: You all schedule the time, people make sure they bring their fanciest cup of their favorite hot beverage and y’all enjoy just hanging out on a video call chatting about what’s new, sharing funny cat videos and the latest Baby Yoda memes.</p>
+			<p>At times, it can feel lonely to be working remotely. You miss the water cooler chat, hanging out with your team mates and just have a casual conversation. Well, good news! We can use our tools not only for work, but also for fun. Create a “Watercooler” or “Lounge” channel in your chat service of choice and go to town! Or: Why not just set up 20 min for a coffee/tea break for the entire team: You all schedule the time, people make sure they bring their fanciest cup of their favorite hot beverage and y’all enjoy just hanging out on a video call chatting about what’s new, sharing funny cat videos and the latest Baby Yoda memes.</p>
 		</section>
 		<section>
 			<h2 id="inspiration-sharing">Inspiration and a culture of sharing</h2>
@@ -479,7 +479,7 @@ H5 {
 			<p>This website is hosted on Github and uses two wonderful typefaces: Hagrid Text and Inter.</p>
 		</section>
 		<footer>
-			<p>This is version 1.<br/> I plan to update this as I learn what people are missing.<br/> Last updated: March 7, 2020</p>
+			<p>This is version 1.2<br/> I plan to update this as I learn what people are missing.<br/> Last updated: March 12, 2020</p>
 		</footer>
 	</div>
 </body>
