--- a/index.html
+++ b/index.html
@@ -172,6 +172,9 @@ H5 {
 	line-height: 1.7;
 }
 
+footer {
+	text-align: right;	
+}
 /* Media Queries */
 
 /* Desktop Big Ass Screens */
@@ -482,7 +485,8 @@ H5 {
 		</section>
 		<section id="remote-tools">
 			<h2>Tools and services that can help you make working remotely a success</h2>
-			<p>As I have said before, managing and working remotely as part of a distributed team comes with its own challenges. And while success depends almost entirely on the people and culture in your team/company, there are many great software tools and services out there that can help you establish great workflows. I’m thinking about publishing a more curated list of tools here, but for now and in the light of the current situations I’d encourage you all to check out what the folks over at <a href="http://www.remote.tools">remote.tools</a>have put together. The site is neatly organized based on categories, so it should be fairly quick to find what you’re looking for.</p>
+			<p>As I have said before, managing and working remotely as part of a distributed team comes with its own challenges. And while success depends almost entirely on the people and culture in your team/company, there are many great software tools and services out there that can help you establish great workflows. I’m thinking about publishing a more curated list of tools here, but for now and in the light of the current situations I’d encourage you all to check out what the folks over at <a href="http://www.remote.tools">remote.tools</a> have put together. The site is neatly organized based on categories, so it should be fairly quick to find what you’re looking for.</p>
+		</section>
 		<section id="acknowledgements">
 			<h2>Acknowledgements and thank yous</h2>
 			<p>This document was created in early March 2020 when the Corona Virus outbreak had many companies, Microsoft included, switch a large part of their workforce to work from home. This document <strong>does not aim to be complete</strong> but instead is a collection of guidance, learnings and best practices that I acquired over the years working and managing remotely, and thought to be helpful for my fellow managers and team mates at Microsoft.</p>
@@ -494,7 +498,7 @@ H5 {
 			<p>This is version 1.2<br/> I plan to update this as I learn what people are missing.<br/> Last updated: March 12, 2020</p>
 			<hr>
 			<h2>Changelog</h2>
-			<h3>Version 1.2 (3/12/2020)</h3>
+			<h4>Version 1.2 (3/12/2020)</h4>
 			<ul>
 				<li>Fixed quotation marks</li>
 				<li>Made links more obvious</li>
@@ -502,14 +506,14 @@ H5 {
 				<li>Added new some great helpful articles that came out over the past days in “Recommended Reading”; Please send recommendations or reads you found helpful</li>
 				<li>Started adding a “Remote tools” section at the end, for now a link to http://remote.tools; Please send in recommendations</li>
 			</ul>
-			<h3>Version 1.1 (3/10/2020)</h3>
+			<h4>Version 1.1 (3/10/2020)</h4>
 			<ul>
 				<li>Fixed some typos</li>
 				<li>Fixed mobile layout and optimized some break points</li>
 			</ul>
-			<h3>Version 1 (3/7/2020)</h3>
+			<h4>Version 1 (3/7/2020)</h4>
 			<ul>
-				<li>Shipped initial version</li>
+				<li>Shipped initial version of OMGwfh.com</li>
 			</ul>
 		</footer>
 	</div>
