--- a/index.html
+++ b/index.html
@@ -173,8 +173,13 @@ H5 {
 }
 
 footer {
-	text-align: right;	
+	text-align: left;	
 }
+	
+footer ul {
+	list-style: disc;	
+}
+	
 /* Media Queries */
 
 /* Desktop Big Ass Screens */
