Removed link at the top

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ H5 {
 <body>
 	<div class="container">
 		<header>
-			<p><a href="http://www.benedikt-lehnert.de">Benedikt Lehnert</a></p>
+			<p>Benedikt Lehnert</p>
 		</header>
 		<section id="cover">
 			<h1>OMG <br/> I’m working remotely, now what?!</h1>
