--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>Benedikt Lehnert – OMG I’m working remotely, now what?!</title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" >
+<meta http-equiv="content-language" content="en">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!--
