--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <title>Hi, I’m Ben</title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" >
@@ -289,7 +289,7 @@ H5 {
 	<div class="container">
 		<header>
 		</header>
-		<section id="cover">
+		<main id="cover">
 			<h1>Hi,</h1>
 				<p>My name is Benedikt Lehnert &mdash; but everybody calls me Ben. I’m a designer, executive, and angel investor living in Princeton, New Jersey. </p> 
 					<p>In the 20+ years of my career so far, I’ve had the privilege to work with some of the best startups, corporations, and investors in the world.</p> 
@@ -297,7 +297,7 @@ H5 {
 				<p>Since 2022, I’m the Chief Design Officer at <a href="https://www.getstark.co">Stark</a>, an industry-changing startup on the mission to make the world’s software accessible for everyone. <br>As an Entrepreneurship & Design Fellow, I teach aspiring entrepreneurs at the <a href="https://kellercenter.princeton.edu">Keller Center at Princeton University</a>.</p>
 				<p>I love pour-over coffee, handmade things, the sound of water, and photography in black and white. I enjoy spending my spare time with my family, reading, doing yoga and walking.</p> 
 				<p>If you want to talk shop or have a question you think I could help you answer, please connect with me on <a href="https://www.linkedin.com/in/benediktlehnert">Linkedin</a>, <a href="mailto:benedikt.lehnert+desk@gmail.com">drop me a line</a> or let’s meet for a coffee.</p>
-		</section>
+		</main>
 		<footer>
 			<img src="images/ben-scribble-head.png" alt="" width="300px">
 		</footer>
