--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ footer ul {
 @media (max-width: 480px) and (min-width: 0px) { 
 
 body {
-	font-size: 16px;
+	font-size: 22px;
 }
 
 section {
@@ -245,7 +245,7 @@ H1, H2, H3, H4, H5 {
 H1, H2 {
 	font-family: "ff-real-headline-pro", "Helvetica Neue", "Segoe UI", Segoe, Helvetica, Arial, "Lucida Grande", sans-serif;
 	font-size: 50px;
-	font-weight: normal; 
+	font-weight: 700; 
 	font-style: normal;
 	margin-top: 40px;
 	margin-bottom: 20px;
