Tweaks in footer

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ H5 {
 }
 
 footer {
-	text-align: right;	
+	text-align: center;	
 }
 	
 footer ul {
@@ -298,7 +298,7 @@ H5 {
 				<p>If you want to talk shop or have a question you think I could help you answer, please connect with me on <a href="https://www.linkedin.com/in/benediktlehnert">Linkedin</a>, <a href="mailto:benedikt.lehnert+desk@gmail.com">drop me a line</a> or let’s meet for a coffee.</p>
 		</main>
 		<footer>
-			<img src="images/ben-scribble-head.png" alt="" width="300px">
+			<img src="images/ben-scribble-head.png" alt="A scribbled circle with many lines overlapping to fill it, on top two white circles and a semi circle shape forming a smiley face." width="300px">
 		</footer>
 	</div>
 </body>
