--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ H5 {
 		</header>
 		<main id="cover">
 			<h1>Hi,</h1>
-				<p>My name is Benedikt Lehnert &mdash; but everybody calls me Ben. I’m a designer, executive, and angel investor living in Princeton, New Jersey. </p> 
+				<p>My name is Benedikt Lehnert (but everybody calls me Ben). I’m a designer, executive, and angel investor living in Princeton, New Jersey. </p> 
 				<p>I focus my energy on creating useful products people love and leading the world-class teams that make them. I mentor and teach to equip the next generation of leaders with the necessary optimism and creative courage to tackle the paradigm shifts ahead.</p>
 				<p>Since 2022, I’m the Chief Design Officer at <a href="https://www.getstark.co">Stark</a>, an industry-changing startup on the mission to make the world’s software accessible for everyone. <br>As an Entrepreneurship & Design Fellow, I teach aspiring entrepreneurs at the <a href="https://kellercenter.princeton.edu">Keller Center at Princeton University</a>.</p>
 				<p>I love pour-over coffee, handmade things, the sound of water, and photography in black and white. I enjoy spending my spare time with my family, reading, doing yoga and walking.</p> 
