--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ H5 {
 
 				<p>In my role as Entrepreneurship & Design Fellow at <a href="https://kellercenter.princeton.edu">Princeton’s Keller Center</a>, I study and teach at the intersection of entrepreneurship, design, and business with a focus on AI and co-creativity, neuroaesthetics, and the socio-economic responsibility of design.</p>
 
-				<p>As an advisory board member of the <a href="">Design Executive Council (DXC)</a> I help shape the standards and developments of the humanistic design field as AI causes paradigm shifts at the nexus of experience design and business strategy.</p>
+				<p>As an advisory board member of the <a href="https://www.designexecutivecouncil.com">Design Executive Council (DXC)</a> I help shape the standards and developments of the humanistic design field as AI causes paradigm shifts at the nexus of experience design and business strategy.</p>
 
 				<p>Along the way, I’ve learned that the most successful businesses of the 21st century aren’t built on spreadsheets alone. They’re built on a profound understanding of human experience, hands-on creative leadership, and the courage to challenge conventional business wisdom. This insight drives my work with leaders who are ready to move beyond traditional frameworks and create organizations that inspire both their customers and their teams.</p>
 
