Updated bio with 74West info

--- a/index.html
+++ b/index.html
@@ -299,9 +299,9 @@ H5 {
 				
 				<p>As a designer turned big tech executive and angel investor, I’ve experienced both what it takes to take a startup from zero to multi million dollar exit as well as how to successfully transform the culture of companies such as Microsoft and SAP to be experience-focused – and lift the business to new heights because of it.</p>
 
-				<p>I’m currently the Chief Design Officer at <a href="https://www.getstark.co">Stark</a>, an industry-changing startup on the mission to make the world’s software accessible for everyone.</p>
+				<p>I’m the founder and CEO of <a href="https://www.74west.co">74West</a>, a sleeve-up, hands-on advisory practice at the intersection of customer experience, design integration, and strategy execution. I partner 1:1 with CEOs, executives, or boards who are navigating pivotal moments in their organizations.</p>
 
-				<p>In my role as Entrepreneurship & Design Fellow at <a href="https://kellercenter.princeton.edu">Princeton’s Keller Center</a>, I study and teach at the intersection of entrepreneurship, design, and business with a focus on AI and co-creativity, neuroaesthetics, and the socio-economic responsibility of design.</p>
+				<p>In my role as Entrepreneurship & Design Fellow at <a href="https://kellercenter.princeton.edu">Princeton’s Keller Center</a>, I research and teach the convergence of entrepreneurship, design, and business with a focus on AI and co-creativity, neuroaesthetics, and the socio-economic responsibility of design.</p>
 
 				<p>As an advisory board member of the <a href="https://www.designexecutivecouncil.com">Design Executive Council (DXC)</a> I help shape the standards and developments of the humanistic design field as AI causes paradigm shifts at the nexus of experience design and business strategy.</p>
 
