--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ H5 {
 		</header>
 		<main id="cover">
 			<h1>Hi there!</h1>
-				<p>My name is Benedikt Lehnert (but everybody calls me Ben). I’m a designer, educator, and advisor living between Princeton, NJ and Kingston, NY. </p> 
+				<p>My name is Benedikt Lehnert (but everybody calls me Ben). I’m a designer, educator, and advisor living between Princeton, NJ and Montréal, QC. </p> 
 				
 				<p>I focus my energy on creating useful products people love and leading the world-class teams that make them. I mentor and teach to equip the next generation of leaders with the necessary optimism and creative courage to tackle the paradigm shifts ahead.</p>
 				
